11 January 2008: Wouter
	- man page, warning removed.
	- added text describing the use of stub zones for private zones.

10 January 2008: Wouter
	- typo in example.conf.
	- made using ldns-src that is included the package more portable
	  by linking with .lo instead of .o files in the ldns package.
	- nicer do-ip6: yes/no documentation.
	- nicer linking of libevent .o files.
	- man pages render correctly on solaris.

9 January 2008: Wouter
	- fixup openssl RAND problem, when the system is not configured to
	  give entropy, and the rng needs to be seeded.

8 January 2008: Wouter
	- print median and quartiles with extensive logging.

4 January 2008: Wouter
	- document misconfiguration in private network.

2 January 2008: Wouter
	- fixup typo in requirements.
	- document that 'refused' is a better choice than 'drop' for 
	  the access control list, as refused will stop retries.

7 December 2007: Wouter
	- unbound-host has a -d option to show what happens. This can help
	  with debugging (why do I get this answer).
	- fixup CNAME handling, on nodata, sets and display canonname.
	- dot removed from CNAME display.
	- respect -v for NXDOMAINs.
	- updated ldns-src.tar.gz with ldns-trunk today (1.2.2 fixes).
	- size_t to int for portability of the header file.
	- fixup bogus handling.
	- dependencies and lint for unbound-host.

6 December 2007: Wouter
	- library resolution works in foreground mode, unbound-host app
	  receives data.
	- unbound-host prints rdata using ldns.
	- unbound-host accepts trust anchors, and prints validation
	  information when you give -v.

5 December 2007: Wouter
	- locking in context_new() inside the function.
	- setup of libworker.

4 December 2007: Wouter
	- minor Makefile fixup.
	- moved module-stack code out of daemon/daemon into services/modstack,
	  preparing for code-reuse.
	- move context into own header file.
	- context query structure.
	- removed unused variable pwd from checkconf.
	- removed unused assignment from outside netw.